force-app/main/default/objects/bofc__BOFCFieldsAnalyzer__c/fields/bofc__Field_Analyzer_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Field_Analyzer_Name__c</fullName>
    <label>Field Analyzer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>