force-app/main/default/objects/bofc__BOFCFieldsAnalyzer__c/fields/bofc__Fields__c.field-meta.xml
<CustomField>
    <fullName>bofc__Fields__c</fullName>
    <label># of Fields</label>
    <summaryForeignKey>bofc__BOFCFieldsAnalyzerResult__c.bofc__BOFCFieldsAnalyzer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>