force-app/main/default/objects/bofc__BOFCFieldsAnalyzer__c/fields/bofc__Filter__c.field-meta.xml
<CustomField>
    <fullName>bofc__Filter__c</fullName>
    <label>Filter Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>