force-app/main/default/objects/bofc__BOFCFieldsAnalyzer__c/fields/bofc__IsCustom__c.field-meta.xml
<CustomField>
    <fullName>bofc__IsCustom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>