force-app/main/default/objects/bofc__BOFCFieldsAnalyzer__c/fields/bofc__Last_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>bofc__Last_Batch_Id__c</fullName>
    <label>Last Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>