force-app/main/default/objects/bofc__BOFCFieldsAnalyzer__c/fields/bofc__Object_Label__c.field-meta.xml
<CustomField>
    <fullName>bofc__Object_Label__c</fullName>
    <label>Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>