force-app/main/default/objects/bofc__BOFCFieldsAnalyzer__c/fields/bofc__Record_Types__c.field-meta.xml
<CustomField>
    <fullName>bofc__Record_Types__c</fullName>
    <label># of Record Types</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>