force-app/main/default/objects/bofc__BOFCFieldsAnalyzer__c/fields/bofc__Records__c.field-meta.xml
<CustomField>
    <fullName>bofc__Records__c</fullName>
    <defaultValue>0</defaultValue>
    <label># of Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>